<?xml version="1.0" encoding="utf-8"?>
<resources>
<!--  Main app string -->
    <string name="app_id">312867848799588</string>
    <string name="app_name">食在澳門</string>
    <string name="homepage">主頁</string>
    <string name="recommend_tab">今期推介</string>
    <string name="coupon_tab">優惠發送</string>
    <string name="restaurant_search">餐廳搜尋</string>
    <string name="map_search">漫游澳門</string>
    <string name="favorite_list">我的最愛</string>
    <string name="refresh">重新整理</string>
    <string name="loadingInfo">載入資訊中...</string>
    <string name="loadingContent">載入主頁資料中...</string>
    <string name="dismissAd">向下拖曳以移除廣告</string>
    
    
<!--  Recommmend -->
    <string name="noInternetMsg">請連接網絡獲取資料</string>
    <string name="errorMsg">網絡連接問題,請稍後重試</string>
    <string name="retryMsg">重試</string>
    
<!--  Coupon  -->
    <string name="mainCoupon">主優惠</string>
    <string name="normalCoupon">普通優惠</string>
    <string name="creditVipCoupon">信用卡/會員卡優惠</string>
    <string name="loadingMainCoupon">載入主優惠中...</string>
    
<!--  Details -->
    <string name="addr">地址</string>
    <string name="phone">電話</string>
    <string name="website">網址</string>
    <string name="cash">現金</string>
    <string name="paymentMethod">付款方法</string>
    <string name="businessHours">營業時間</string>
    <string name="info">訊息</string>
    <string name="intro">簡介</string>
    <string name="menu">菜單</string>
    <string name="information">資訊</string>
    <string name="addFavorite">加入最愛</string>
    <string name="feedBack">意見</string>
    <string name="giveFeedBack">給店主意見</string>
    <string name="alreadyInFavorite">已加入最愛</string>
    <string name="alreadyRemoveFromFavorite">已從最愛移除</string>
    <string name="branch">分店</string>
    <string name="branchList">分店列表</string>
    <string name="share">分享</string>
    <string name="shareFailed">分享失敗</string>
    <string name="shareTo">分享到...</string>
    
<!-- Menu -->
    <string name="nextPage">下一頁</string>
    <string name="prevPage">上一頁</string>
    <string name="callPhone">撥打電話</string>
    
<!--  FeedBack -->
    <string name="fbName">名字</string>
    <string name="fbEmail">電郵</string>
    <string name="fbEmailHint">電郵(必須填寫)</string>
    <string name="fbContent">內容</string>
    <string name="fbSubmit">提交</string>
    <string name="sendSucceed">成功發送</string>
    <string name="sendFailed">發送失敗</string>
    <string name="sending">發送中...</string>
    <string name="emailWrongFormat">電郵格式不對</string>
    <string name="contentWordsTooShort">內容字數太短</string>
    
<!--  Search -->
    <string name="search">搜尋</string>
    <string name="searchHistory">搜尋記錄</string>
    <string name="directSearch">直接搜尋</string>
    <string name="advancedSearch">進階搜尋</string>
    <string name="cancel">取消</string>
    <string name="clear">清除</string>
    <string name="enterName">請輸入餐廳名字</string>
    <string name="all">全部</string>
    <string name="region">地區</string>
    <string name="dishes">菜式</string>
    <string name="category">服務</string>
    <string name="searchResults">搜尋結果</string>
    <string name="noSearchResults">搜尋不到符合要求的餐廳</string>
    <string name="noMapSearchResults">搜尋不到地圖範圍內的餐廳</string>
    <string name="selectOneItemPrompt">請選擇至少一項</string>
    <string name="loadingAdv">載入廣告中...</string>

<!--  Favorite -->
    <string name="editList">編輯列表</string>
    <string name="done">完成</string>
    <string name="noFavoriteList">暫時沒有任何最愛餐廳</string>

<!--  Map -->
    <string name="searchNearby">搜尋範圍中心內餐廳</string>
    <string name="backToMacau">顯示澳門地圖</string>
    <string name="restList">餐廳列表</string>
    <string name="showList">顯示列表</string>
    <string name="showMap">顯示地圖</string>
    <string name="totalResultsFound">共有%d間餐廳</string>
    <string name="mapCenterArea">地圖中心</string>
    <string name="displaySearchQuery">搜尋名字有%s的餐廳</string>
    <string name="googleMap">顯示在Google地圖</string>
    <string name="macauPeninsula">澳門\n半島</string>
    <string name="macauIsland">離島</string>

<!--  About -->	
    <string name="disclaimer">免責聲明</string>
    <string name="versionNo">3.1.1</string>
    <string name="aboutUs">關於我們</string>
    <string name="macauWifi">澳門 WIFI 熱點</string>
    <string name="advertiseUs">刊登廣告和查詢</string>
    <string name="ourWebsite">志達科技有限公司\nCYCON TECHNOLOGY LIMITED</string>
    <string name="emailUs">電郵 : info@cycon.com.mo </string>
    <string name="callUs1">推廣部: 6357-3095</string>
    <string name="callUs2">技術部: 6361-1387</string>
    <string name="faxUs">傳真 : 2853-2716</string>
    <string name="disclaimerText">1。本程式所載的內容資料均由第三者, 四者或機構所提供，僅供參考之用。用者應自行判斷內容之真實性。 \n2.本程式將盡力確保該等資料的準確，若發現本程式所載列的內容出現問題，請聯絡我們。本程式具有自行處理（刪除或保留）所有內容的權利，且將不作另行通知。\n3．由於最近通貨彭脹急劇, 部分餐單價目經常有所調整。  用家請自行查詢最新價目。\n4．本程式不會負責因資料錯誤而導致之任何損失。\n</string>
    <string name="macauRegion">澳門區</string>
    <string name="taipaRegion">氹仔區</string>
    <string name="coloaneRegion">路環區</string>
    
    
 <!-- Latest -->
    <string name="latestNews">最新情報</string>
    
 <!-- Food News-->
    <string name="foodNews">美食追擊</string>
    <string name="cafeDetails">餐廳資料</string>
    
 <!-- Dialog -->
 	<string name="exitProgramPrompt">你確定要退出程式嗎?</string>
 	<string name="agreeDisclaimer">同意以上條款</string>
 	<string name="confirmed">確定</string>
 	
 <!-- PhotoShare -->
 	<string name="photoShare">美食分享</string>
 	<string name="psHot">人氣相片</string>
 	<string name="psFriends">朋友上載</string>
 	<string name="psUpload">上載相片</string>
 	<string name="pleaseLogin">請先登入</string>
 	<string name="loginProcess">正在登入中...</string>
 	<string name="facebookLogin">使用 Facebook 登入</string>
 	<string name="weiboLogin">使用微博登入</string>
 	<string name="loginMessage">你已登入為%s, 歡迎發佈照片</string>
 	<string name="logoutMessage">成功登出</string>
 	<string name="logout">登出</string>
 	<string name="findFriends">尋找朋友</string>
 	<string name="friendsList">朋友列表</string>
 	<string name="findingFriends">尋找朋友中...</string>
 	<string name="useAlbum">從相簿選取</string>
 	<string name="takePhoto">拍照</string>
 	<string name="noFriendsFound">沒有朋友登入食在澳門</string>
 	<string name="findLoginedFriends">尋找登入食在澳門的朋友</string>
 	<string name="noFriendsActivityFound">沒有被你關注的朋友上載相片</string>
 	<string name="follow">關注</string>
 	<string name="followAll">關注所有</string>
 	<string name="followAllSucceed">已關注所有朋友</string>
 	<string name="unfollow">取消關注</string>
 	<string name="firstShowFriendsActivityMsg">%s你好! 歡迎登入食在澳門\n\n你可透過關注朋友在這裡顯示朋友及自己上傳美食相片的動態</string>
 	<string name="peopleLikedThis">有 %d 個人讚好</string>
 	<string name="peopleListLikedThis">對此讚好的朋友</string>
 	<string name="likedThis">對此讚好</string>
 	<string name="alsoLikedThis">都讚好</string>
 	<string name="like">讚好</string>
 	<string name="liked">已讚</string>
 	<string name="comment">留言</string>
 	<string name="delete">刪除</string>
 	<string name="deleteConfirmPrompt">你確定要刪除這相片嗎?</string>
 	<string name="cafeInfo">資料</string>
    <string name="send">發送</string>
    <string name="commentHeader">請發表留言</string>
    <string name="commentGhost">發表回應...</string>
    <string name="addCaption">請加入標題...</string>
    <string name="chooseCafe">請選擇餐廳</string>
    <string name="imageCaptureFailed">拍攝相片失敗,請重試</string>
    <string name="imageChooseFailed">選擇相片失敗,請重試</string>
    <string name="post">發佈</string>
    <string name="shareInFb">分享到 Facebook</string>
    <string name="shareInWeibo">分享到微博</string>
    <string name="updateLocation">位置更新中..</string>
    <string name="psSearchCafeHint">搜尋資料庫所有餐廳</string>
    <string name="selectCafe">選擇餐廳</string>
    <string name="addCafe">新增加餐廳</string>
    <string name="pleaseFillCafeName">請填寫餐廳名字</string>
    <string name="uploadingPhotoProgress">發佈相片中...</string>
    <string name="uploadSucceed">發佈成功</string>
    <string name="uploadFailure">發佈失敗,請稍後重試</string>
    <string name="confirmExitUpload">你確定要放棄發佈這相片?</string>
    <string name="sharePhotoCaption">%1$s\n\n@%2$s\n地址:%3$s\n電話:%4$s\n營業時間:%5$s</string>
 	
 	<!--  Misc. -->
 	<string name="meter">米</string>
 	<string name="km">公里</string>
 	<string name="sec">秒</string>
 	<string name="min">分鐘</string>
 	<string name="hour">小時</string>
 	<string name="day">日</string>
 	<string name="month">個月</string>
 	<string name="before">前</string>
 	
	<!--  SQL Queries -->
	<string name="initCafeTableSql">CREATE TABLE IF NOT EXISTS CAFEENTRIES(
		id INTEGER PRIMARY KEY, name TEXT , phone TEXT , district TEXT , 
		address TEXT , website TEXT , coordx TEXT , 
		coordy TEXT , openhours TEXT , description TEXT , 
		message TEXT , type0 TEXT , type1 TEXT , 
		type2 TEXT , option_phoneorder TEXT , option_booking TEXT , 
		option_night TEXT , option_call TEXT , option_buffet TEXT , 
		option_banquet TEXT , menuid TEXT ,
		introid TEXT , intropage TEXT , recommendid TEXT ,
		recommendpage TEXT , menupage TEXT , 
		payment TEXT , status TEXT ,
		option_wifi TEXT , option_parking TEXT , branch TEXT , 
		priority TEXT, option_macaupass TEXT )
	</string>
	
	<string name="insertCafeSql">INSERT INTO CAFEENTRIES(
		id, name, phone, district, address, website, coordx, coordy, openhours,
		description, message, type0, type1, type2, option_phoneorder, 
		option_booking, option_night, option_call, option_buffet,
		option_banquet, menuid, introid, intropage, recommendid, 
		recommendpage, menupage, payment, status, option_wifi,
		option_parking, branch, priority, option_macaupass) VALUES(?, ?, ?, ?, ?,
		?, ?, ?, ?, ?,?, ?, ?, ?, ?,?, ?, ?, ?, ?,
		?, ?, ?, ?, ?,?, ?, ?, ?, ?,?, ?, ?)</string>
		

	<string name="getCafeEntriesSql">SELECT * FROM CAFEENTRIES 
	</string>
	<string name="clearCafeTableSql">DROP TABLE IF EXISTS CAFEENTRIES</string>
	
    
</resources>
