<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/headerview_bg"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:paddingTop="0dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    	android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/region"
            android:textColor="@color/green_text"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="5dp"
            android:text="@string/dishes"
            android:textColor="@color/green_text"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="5dp"
            android:text="@string/category"
            android:textColor="@color/green_text"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/regionSpinner"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/mapCenterArea" />

        <Spinner
            android:id="@+id/dishesSpinner"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>