<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dip"
    android:orientation="vertical"
    android:layout_gravity="center" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fbName" 
		    android:textColor="@color/tab_gray_text"
		    android:textSize="18sp"
		    android:paddingLeft="2dip"
		    android:paddingRight="2dip"/>

        <EditText
            android:id="@+id/nameText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dip"
            android:hint="@string/fbName" 
            android:imeOptions="actionNext">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fbEmail" 
            android:textSize="18sp"
		    android:textColor="@color/tab_gray_text"
		    android:paddingLeft="2dip"
		    android:paddingRight="2dip"/>
        
        <EditText
            android:id="@+id/emailText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dip" 
            android:hint="@string/fbEmailHint"
            android:imeOptions="actionNext"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:paddingBottom="20dip">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fbContent" 
            android:textSize="18sp"
		    android:textColor="@color/tab_gray_text"
		    android:paddingLeft="2dip"
		    android:paddingRight="2dip"/>
        
        <EditText
            android:id="@+id/contentText"
            android:textSize="16sp"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:maxHeight="300dip"
            android:layout_weight="1"
            android:gravity="top"
            android:layout_marginLeft="10dip" 
            android:imeOptions="actionDone">
        </EditText>

    </LinearLayout>

</LinearLayout>