<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center" >
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/addCafe"
        android:paddingLeft="16dp"
        android:gravity="center_vertical"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:background="@drawable/actionbar_bg"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fbName" 
		    android:textColor="@color/tab_gray_text"
		    android:textSize="18sp"
		    android:paddingLeft="2dip"
		    android:paddingRight="2dip"/>

        <EditText
            android:id="@+id/nameText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dip"
            android:imeOptions="actionNext">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addr" 
            android:textSize="18sp"
		    android:textColor="@color/tab_gray_text"
		    android:paddingLeft="2dip"
		    android:paddingRight="2dip"/>
        
        <EditText
            android:id="@+id/addrText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dip" 
            android:imeOptions="actionNext"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone" 
            android:textSize="18sp"
		    android:textColor="@color/tab_gray_text"
		    android:paddingLeft="2dip"
		    android:paddingRight="2dip"/>
        
        <EditText
            android:id="@+id/phoneText"
            android:textSize="16sp"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dip" 
            android:imeOptions="actionDone">
        </EditText>

    </LinearLayout>
    

</LinearLayout>