<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/actionbar_bg"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/commentHeader"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    
    <ListView
        android:id="@+id/friendlistView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@null"
        android:clipToPadding="false"
        android:transcriptMode="alwaysScroll"
        android:isScrollContainer="false" 
        android:stackFromBottom="true"
        android:paddingBottom="8dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@android:drawable/divider_horizontal_bright" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingBottom="4dp"
        android:paddingLeft="12dp"
        android:paddingRight="4dp"
        android:paddingTop="4dp" >

        <EditText
            android:id="@+id/editTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:paddingBottom="6dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/commentGhost" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_gray_selector"
            android:ellipsize="marquee"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/send"
            android:textColor="@color/tab_gray_text"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>